# Plugin-Dev-Setup

./: .gitignore  BUILDING-DOCKER.md  BUILDING-LINUX.md  BUILDING.md  CATEGORIES.md  CAVEATS.md  LICENSE  LICENSING.md  LV2-FEATURES.md  MULTI-THREADING.md  README.md  REQUIREMENTS.md  STYLING.md  TIME.md
.github/workflows/: bootstrap-docker.yml  bootstrap-linux.yml  ci-build-examples.sh
docker/: Dockerfile  build.sh
examples/: README.md
examples/dpf-cmake/: CMakeLists.txt  DistrhoPluginInfo.h  PluginDSP.cpp
examples/dpf-gain-cmake/: CMakeLists.txt  DistrhoPluginInfo.h  PluginDSP.cpp  README.md
examples/juce-cmake/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
examples/juce-gain-cmake/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  README.md
examples/lv2-custom-styling/: CMakeLists.txt  README.md  Styling.c
examples/lv2-custom-styling/DarkglassExampleStyling.lv2/: manifest.ttl.in  plugin.ttl  styling.ttl
examples/lv2-filter-cmake/: CMakeLists.txt  Filter.cpp  Korg35Filters.hpp  README.md  ValueSmoother.hpp
examples/lv2-filter-cmake/DarkglassExampleFilterLV2.lv2/: DarkglassExampleFilterLV2.ttl  manifest.ttl.in
examples/rust-lv2-gain/: Cargo.toml  README.md  gain.rs
examples/rust-lv2-gain/DarkglassExampleGainRust.lv2/: DarkglassExampleGainRust.ttl  manifest.ttl
